--- a/README.ipynb
+++ b/README.ipynb
@@ -218,16 +218,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "cd ~/catkin_ws/src/fast_change_detection/bin\n",
-    "./fastcd_example DATASET_PATH"
+    "cd ~/catkin_ws/src/fast-change-detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gunzip dataset/statue/model.obj.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bin/fastcd_example dataset/statue"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where `DATASET_PATH` is the path to the directory of a dataset (e.g. `~/changedetection2017/statue`).\n",
     "Some example datasets can be found [here](http://www.ipb.uni-bonn.de/data/changedetection2017/).\n",
     "\n",
     "Alternatively, the `example` directory contains some scripts to immediately test the library.\n",
@@ -297,7 +312,19 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Bash",
+   "language": "bash",
+   "name": "bash"
+  },
+  "language_info": {
+   "codemirror_mode": "shell",
+   "file_extension": ".sh",
+   "mimetype": "text/x-sh",
+   "name": "bash"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
