--- a/README.ipynb
+++ b/README.ipynb
@@ -218,31 +218,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd ~/catkin_ws/src/fast-change-detection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gunzip dataset/statue/model.obj.gz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bin/fastcd_example dataset/statue"
+    "%%bash\n",
+    "cd ~/catkin_ws/src/fast_change_detection/bin\n",
+    "./fastcd_example DATASET_PATH"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "where `DATASET_PATH` is the path to the directory of a dataset (e.g. `~/changedetection2017/statue`).\n",
     "Some example datasets can be found [here](http://www.ipb.uni-bonn.de/data/changedetection2017/).\n",
     "\n",
     "Alternatively, the `example` directory contains some scripts to immediately test the library.\n",
@@ -312,6 +297,7 @@
    ]
   }
  ],
+
  "metadata": {
   "kernelspec": {
    "display_name": "Bash",
