--- a/README.ipynb
+++ b/README.ipynb
@@ -293,7 +293,37 @@
     "\n",
     "## License\n",
     "\n",
-    "This project is licensed under the FreeBSD License. See the LICENSE.txt file for details."
+    "\n",
+    "This project is licensed under the Fgunzip ../dataset/statue/model.obj.gzreeBSD License. See the LICENSE.txt file for details.\n",
+    "\n",
+    "## Using with ROSLab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd ~/catkin_ws/src/fast-change-detection/bin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gunzip ../dataset/statue/model.obj.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "./fastcd_example ../dataset/statue"
    ]
   }
  ],
