add roslab instructions

--- a/README.ipynb
+++ b/README.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "# Fast Change Detection\n",
+    "<a href=\"#roslab-run\"><img src=\"https://img.shields.io/badge/ROSLab-run-brightgreen.svg\"></a>\n",
     "\n",
     "## Description\n",
     "\n",
@@ -294,9 +295,53 @@
     "## License\n",
     "\n",
     "\n",
-    "This project is licensed under the Fgunzip ../dataset/statue/model.obj.gzreeBSD License. See the LICENSE.txt file for details.\n",
+    "This project is licensed under the FreeBSD License. See the LICENSE.txt file for details.\n",
     "\n",
-    "## Using with ROSLab"
+    "# ROSLab Run\n",
+    "\n",
+    "## Prerequisites:\n",
+    "* [Docker](https://www.docker.com/)\n",
+    "* [nvidia-docker](https://github.com/nvidia/nvidia-docker/wiki/Installation-(version-2.0))\n",
+    "* Tested on Ubuntu Linux 16.04, Docker version 18.06.1-ce, NVIDIA Driver version 410.48.\n",
+    "\n",
+    "## 1. Clone the repository and build ROSLab image:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git clone https://github.com/ICRA-2018/fast_change_detection.git\n",
+    "cd fast_change_detection\n",
+    "./roslab_build"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Launch ROSLab image:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "./roslab_run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Open JupyterLab in your browser:\n",
+    "[http://localhost:8888/lab/tree/README.ipynb](http://localhost:8888/lab/tree/README.ipynb)\n",
+    "\n",
+    "## 4. Run in JupyterLab:"
    ]
   },
   {
@@ -324,6 +369,19 @@
    "outputs": [],
    "source": [
     "./fastcd_example ../dataset/statue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A 3D visualization of the model will appear. The changes are represented by the blue ellipsoids.\n",
+    "Rotate the view with the mouse while the right button is pressed. The keyboard is mapped as following:\n",
+    "* W/A/S/D -> Move around\n",
+    "* Space -> Move up vertically\n",
+    "* C -> Move down vertically\n",
+    "* Shift -> Keep pressed to move faster\n",
+    "* 1-0 -> Teleport the camera to the pose of one of the first 10 cameras"
    ]
   }
  ],
